--- a/style.css
+++ b/style.css
@@ -9,30 +9,18 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	overflow: hidden;
+	/* overflow: hidden; */
+	position: relative;
 }
 
 nav {
 	width: 100%;
-	font-size: 15px;
 }
 
-nav a {
-	width: auto;
-}
 nav ul {
 	width: 90%;
 	display: flex;
 	justify-content: space-between;
-}
-
-nav .nav-item {
-	margin: auto;
-	color: #fff;
-}
-
-body nav ul li {
-	cursor: pointer;
 }
 
 button {
@@ -55,6 +43,10 @@ button:hover {
 	color: #fff !important;
 }
 
+.dropdown-item:hover {
+	cursor: pointer;
+}
+
 .disabled {
 	color: rgba(255, 255, 255, 0.5);
 }
@@ -63,17 +55,6 @@ button:hover {
 	background-color: transparent;
 	color: rgba(255, 255, 255, 0.5);
 	transform: none;
-}
-
-.nav-item label {
-	margin-right: 10px;
-	margin-top: 10px;
-}
-
-select {
-	border-radius: 5px;
-	padding: 0 10px;
-	margin-top: 10px;
 }
 
 #run {
@@ -98,8 +79,8 @@ select {
 
 .legend {
 	margin: auto;
-	position: relative;
-	top: 30px;
+	position: absolute;
+	top: 5rem;
 	display: flex;
 	height: 1.5rem;
 	width: 80%;
@@ -108,7 +89,7 @@ select {
 }
 
 .item {
-	padding: 10px;
+	padding: 0.5rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -121,16 +102,17 @@ select {
 
 .graph {
 	position: relative;
-	margin-top: 60px;
+	margin-top: 4.5rem;
 	background-color: #fff;
 	width: 90%;
 	height: 90%;
+	top: 3rem;
 }
 
 .graph-row {
-	height: 30px;
 	display: flex;
 	justify-content: center;
+	height: 30px;
 }
 
 .graph-col {
@@ -310,5 +292,25 @@ select {
 	100% {
 		transform: scale(1);
 		background-color: #fffe6a;
+	}
+}
+
+@media (max-width: 576px) {
+	.legend {
+		display: none;
+	}
+}
+@media (max-width: 992px) {
+	.graph {
+		top: 4.5rem;
+	}
+	.description {
+		font-size: 10px;
+	}
+}
+
+@media (max-width: 1250px) {
+	.description {
+		font-size: 13px;
 	}
 }
